--- a/publication.html
+++ b/publication.html
@@ -137,11 +137,24 @@
 										<p>
 											<ol>
 												<li>Enhancing the efficiency of focal TMS coils with magnetic cores, ISMRM 2022 Workshop on MRI of Neuromodulation, Bethesda, MD, October 17-19, 2022.</li>
-												<li>The magnetic-core coils with high inductance and high B field strength are more efficient in inducing suprathreshold motor response in rats, 2nd Brain & Human Body Modeling Conference, Charlestown, MA, August 18-19, 2022.</li></ol>
+												<li>The magnetic-core coils with high inductance and high B field strength are more efficient in inducing suprathreshold motor response in rats, 2nd Brain & Human Body Modeling Conference, Charlestown, MA, August 18-19, 2022.</li>
+											</ol>
 										</p>
 
 									</section>
 
+									<section>
+										<header>
+											<h3>Annual Meeting</h3>
+										</header>
+										<p>
+											<ol>
+												<li>C.Q. Li, S. Hoffman, H. Nguyen, A. Vrana, A. Carney, Y. Duan, Z. Ma, N. Zhang, Y. Yang, and H. Lu, CBV mapping reveals regional brain activity changes in rats following longitudinal focal Transcranial Magnetic Stimulation (TMS), 2025 ISMRM & ISMRT Annual Meeting & Exhibition, Honolulu, Hawaii, May 10-15, 2025</li>
+											</ol>
+										</p>
+
+									</section>
+									
 									<section>
 										<header>
 											<h3>Patent</h3>
@@ -303,3 +316,4 @@
 
 	</body>
 </html>
+
