--- a/publication.html
+++ b/publication.html
@@ -75,6 +75,7 @@
 									</header>
 									<p>
 										<ol reversed>
+											<li>X. Xiao, C.J. Hammond, B.J. Salmeron, D. Wang, H. Gu, T. Zhai, L. Murray, A. Quam, J. Hill, <span style="font-weight:bold;">H. Nguyen</span>, H. Lu, E.A. Hoffman, A.C. Janes, T.J. Ross, Y. Yang, "<a href="https://doi.org/10.1001/jamanetworkopen.2025.33136">Modification of Brain Connectome on Association Between Adverse Childhood Experiences and Development of Mental Disorders in Preadolescence</a>," <em>JAMA Netw. Open</em> <span style="font-weight:bold;">8</span>, e2533136, 2025.</li>
 											<li>C.Q. Li, S. Hoffman, <span style="font-weight:bold;">H. Nguyen</span>, A. Carney, Y. Duan, Z. Ma, N. Zhang, Y. Yang, and H. Lu, "<a href="https://doi.org/10.1162/IMAG.a.92">Functional MRI reveals regional changes of brain activity in rats following longitudinal focal high-density theta burst stimulation (hdTBS)</a>," <em>Imaging Neurosci.</em> <span style="font-weight:bold;">3</span>, IMAG.a.92, 2025.</li>
 											<li><span style="font-weight:bold;">H. Nguyen</span>, M. Vo, J. Hyatt and Z. Wang, "<a href="https://doi.org/10.3390/s25061758">AI-Powered Visual Sensors and Sensing: Where We Are and Where We Are Going</a>," <em>Sensors</em> <span style="font-weight:bold;">25</span>, 1758, 2025.</li>
 											<li><span style="font-weight:bold;">H. Nguyen</span>, C. Li, S. Hoffman, Z. Deng, Y. Yang and H. Lu, "<a href="https://doi.org/10.1088/1741-2552/ad692f">Ultra-high frequency repetitive TMS at subthreshold intensity induces suprathreshold motor response via temporal summation</a>,"  <em>J. Neural Eng.</em> <span style="font-weight:bold;">21</span>, 046044, 2024.</li>
@@ -316,4 +317,5 @@
 
 	</body>
 </html>
+
 
