--- a/publication.html
+++ b/publication.html
@@ -113,6 +113,7 @@
 										</header>
 										<p>
 											<ol>
+												<li>S. Wang, S. Wang, <span style="font-weight:bold;">H. Nguyen</span>, and Z. Wang, "DepthVision3D: a versatile deep learning dataset for 3D imaging", Optica Imaging Congress 2025 (3D, DH, COSI, IS, pcAOP,RadIT), Seattle, Washington, United States, August 18-21, 2025.</li>
 												<li><span style="font-weight:bold;">H. Nguyen</span>, C. Li, A. Giles, Y. Yang, and H. Lu, "TMS via temporal summation: high-frequency rTMS at subthreshold intensity induces suprathreshold motor response in rats", 5th International Brain Stimulation Conference, Lisbon, Portugal, February 19-22, 2023.</li>
 												<li>A. Vrana, S. Baldwin, Q. Meng, <span style="font-weight:bold;">H. Nguyen</span>, Y. Yang, and H. Lu, "Developing a robust awake rat model for mechanistic study of TMS effects with a focused coil", 4th International Brain Stimulation Conference, Charleston, South Carolina, December 6–9, 2021.</li>
 												<li>H. Le, <span style="font-weight:bold;">H. Nguyen</span>, Z. Wang, et al, "An endoscopic 3D structured illumination imaging system for robotic anastomosis surgery (Conference Presentation)", SPIE BIOS Advanced Biomedical and Clinic Diagnostic and Surgical Guidance Systems XVI, San Francisco (2018).</li>
@@ -317,5 +318,6 @@
 
 	</body>
 </html>
+
 
 
