--- a/publication.html
+++ b/publication.html
@@ -75,7 +75,7 @@
 									</header>
 									<p>
 										<ol reversed>
-											<li>S. Wang, <span style="font-weight:bold;">H. Nguyen</span> and Z. Wang, "DepthVision3D: A versatile deep learning dataset for 3D vision,"  <em>Opt. Lasers Eng.</em>, 2026.</li>
+											<li>S. Wang, <span style="font-weight:bold;">H. Nguyen</span> and Z. Wang, "<a href="https://doi.org/10.1016/j.optlaseng.2025.109435">"DepthVision3D: A versatile deep learning dataset for 3D vision</a>,"  <em>Opt. Lasers Eng.</em> <span style="font-weight:bold;">196</span>, 109435, 2026.</li>
 											<li>X. Xiao, C.J. Hammond, B.J. Salmeron, D. Wang, H. Gu, T. Zhai, L. Murray, A. Quam, J. Hill, <span style="font-weight:bold;">H. Nguyen</span>, H. Lu, E.A. Hoffman, A.C. Janes, T.J. Ross, Y. Yang, "<a href="https://doi.org/10.1001/jamanetworkopen.2025.33136">Modification of Brain Connectome on Association Between Adverse Childhood Experiences and Development of Mental Disorders in Preadolescence</a>," <em>JAMA Netw. Open</em> <span style="font-weight:bold;">8</span>, e2533136, 2025.</li>
 											<li>C.Q. Li, S. Hoffman, <span style="font-weight:bold;">H. Nguyen</span>, A. Carney, Y. Duan, Z. Ma, N. Zhang, Y. Yang, and H. Lu, "<a href="https://doi.org/10.1162/IMAG.a.92">Functional MRI reveals regional changes of brain activity in rats following longitudinal focal high-density theta burst stimulation (hdTBS)</a>," <em>Imaging Neurosci.</em> <span style="font-weight:bold;">3</span>, IMAG.a.92, 2025.</li>
 											<li><span style="font-weight:bold;">H. Nguyen</span>, M. Vo, J. Hyatt and Z. Wang, "<a href="https://doi.org/10.3390/s25061758">AI-Powered Visual Sensors and Sensing: Where We Are and Where We Are Going</a>," <em>Sensors</em> <span style="font-weight:bold;">25</span>, 1758, 2025.</li>
@@ -319,6 +319,7 @@
 
 	</body>
 </html>
+
 
 
 
